Explicitly set UTF-8 as the encoding of a TAR stream when unpacking